{
  "sourceLanguage" : "en",
  "strings" : {
    "%lld Failed Attempts" : {
      "localizations" : {
        "en" : {
          "variations" : {
            "plural" : {
              "one" : {
                "stringUnit" : {
                  "state" : "translated",
                  "value" : "%lld Failed Attempt"
                }
              },
              "other" : {
                "stringUnit" : {
                  "state" : "translated",
                  "value" : "%lld Failed Attempts"
                }
              }
            }
          }
        }
      }
    },
    "%lld-Digit Alphanumeric Code" : {

    },
    "%lld-Digit Numeric Code" : {

    },
    "%lld+-Digit Alphanumeric Code" : {

    },
    "%lld+-Digit Numeric Code" : {

    },
    "ACCESS_CODE_PASSCODE_PROMPT" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bitte geben Sie Ihren Code ein"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Please enter your passcode"
          }
        }
      }
    },
    "ACCESS_GUARD_BIOMETRICS_REASON" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Für die biometriebasierte Authentifizierung verwendet."
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Used for biometric-based authentication."
          }
        }
      }
    },
    "ACCESS_GUARD_ERROR_BIOMETRICS_NOT_AVAILABLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Biometrische Authentifizierung ist nicht verfügbar"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Biometric authentication is not available"
          }
        }
      }
    },
    "ACCESS_GUARD_ERROR_STORE_CODE_ERROR_REASON" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Der Code konnte nicht gespeichert werden."
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Could not store the passcode."
          }
        }
      }
    },
    "ACCESS_GUARD_ERROR_TITLE" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Code-Fehler"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Passcode Error"
          }
        }
      }
    },
    "Biometric" : {

    },
    "Biometric Unlock Failed" : {

    },
    "CANCEL" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abbrechen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        }
      }
    },
    "CODE_OPTIONS_CUSTOM_ALPHANUMERIC_DIGIT" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Benutzerdefiniert Alphanumerisch"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Custom Alphanumeric"
          }
        }
      }
    },
    "CODE_OPTIONS_CUSTOM_NUMERIC_DIGIT" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Benutzerdefinierte Nummer"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Custom Numeric"
          }
        }
      }
    },
    "CODE_OPTIONS_FOUR_DIGIT" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vier Ziffern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Four Digits"
          }
        }
      }
    },
    "CODE_OPTIONS_SIX_DIGIT" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sechs Ziffern"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Six Digits"
          }
        }
      }
    },
    "CODE_OPTIONS_UNKNOWN" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unbekannte Option"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unknown Option"
          }
        }
      }
    },
    "Enter Passcode" : {

    },
    "Error: %@" : {

    },
    "PASSCODE_FIELD" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Passwort Textfeld"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Passcode Field"
          }
        }
      }
    },
    "PASSCODE_NOT_ACCORDING_TO_FORMAT" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Der Code ist nicht korrekt formatiert"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "The code is not conforming to the format"
          }
        }
      }
    },
    "PASSCODE_SET_SUCCESS" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neuen Code erfolgreich gespeichert"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Passcode set was successful"
          }
        }
      }
    },
    "Repeat Code" : {

    },
    "Retry" : {

    },
    "Set Code" : {

    },
    "SET_PASSCODE_BACK_BUTTON" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zurücksetzen"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reset"
          }
        }
      }
    },
    "SET_PASSCODE_PROMPT" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bitte geben Sie Ihren neuen Code ein"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Please enter your new passcode"
          }
        }
      }
    },
    "SET_PASSCODE_REPEAT_NOT_EQUAL" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Codes stimmen nicht überein"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Passcodes not equal"
          }
        }
      }
    },
    "SET_PASSCODE_REPEAT_PROMPT" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bitte wiederholen Sie Ihren neuen Code"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Please repeat your new passcode"
          }
        }
      }
    },
    "Successfully Unlocked" : {

    },
    "Unlock via Face ID" : {

    },
    "UNLOCK_TITLE" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entsperren"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Unlock"
          }
        }
      }
    }
  },
  "version" : "1.0"
}